test: add `@DisplayName` annotations to ScmsHealthServiceTest for improved test readability and consistency